[package]
name = "mcx-pac"
description = "Peripheral Access Crate for NXP MCX Series MCUs"
version = "__VERSION__"
edition = "2021"
license = "MIT"
keywords = ["no-std", "arm", "cortex-m", "nxp", "mcx"]
categories = ["embedded", "no-std"]
readme = "../README.md"
authors = ["Logiase Song <logiase.song@gmail.com>"]
repository = "https://github.com/mcx-rs/mcx-pac"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }

[features]
rt = ["cortex-m-rt/device"]
_device_selected = []
